updated with openai only approach, testing done on groq

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,8 @@
-# LLM Provider ("groq" for development, "openai" for submission)
-LLM_PROVIDER=openai
+# OpenAI API Key (required)
+OPENAI_API_KEY=sk-your-openai-key-here
 
-# API Keys (replace with your actual keys)
-GROQ_API_KEY=gsk_your_key_here
-OPENAI_API_KEY=sk_your_key_here
-
-# Model Names
+# Model Name
 OPENAI_MODEL=gpt-4-turbo-preview
-GROQ_MODEL=llama-3.1-70b-versatile
 
 # Embedding & Re-ranking Models
 EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
