--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 openai==1.12.0
-groq==0.4.1
 sentence-transformers==2.3.1
 faiss-cpu==1.8.0
 pymupdf==1.23.8
@@ -11,3 +10,4 @@ python-dotenv==1.0.1
 httpx==0.26.0
 pytest==8.0.0
 pytest-cov==4.1.0
+python-docx==1.1.0
