--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   api:
     build: .
+    container_name: knowledge-assistant-api
     ports:
       - "8000:8000"
     env_file:
